--- a/src/assets/css/note-sidebar.scss
+++ b/src/assets/css/note-sidebar.scss
@@ -41,11 +41,12 @@
         border-bottom: 1px solid #ccc;
         span{
           flex: 1;
-          padding: 0 10px;
-
+          padding: 5px 10px;
+          color: #5A5A5A;
+          font-size: 12px;
         }
       }
-      a:active {
+      .router-link-exact-active{
         border: 2px solid #81c0f3;
         border-radius: 3px;
       }
