--- a/src/assets/css/note-detail.scss
+++ b/src/assets/css/note-detail.scss
@@ -40,6 +40,7 @@
   .editor{
     flex: 1;
     position: relative;
+    height: 600px;
     textarea,.preview{
       position: absolute;
       width: 100%;
