--- a/src/assets/css/note-detail.scss
+++ b/src/assets/css/note-detail.scss
@@ -1,57 +1,61 @@
-.note-detail{
+.note-detail {
   flex: 1;
   display: flex;
   flex-direction: column;
-  .note-empty{
+  .note-empty {
     font-size: 50px;
-    color:#ccc;
+    color: #ccc;
     text-align: center;
     margin-top: 200px;
   }
-  .note-bar{
-    padding: 4px 20px;
-    border-bottom: 1px solid #eee;
-    span{
-      margin-right: 4px;
-      color: #999;
+  .note-content {
+    height: 100%;
+    .note-bar {
+      padding: 4px 20px;
+      border-bottom: 1px solid #eee;
+      span {
+        margin-right: 4px;
+        color: #999;
+      }
+      .iconfont {
+        float: right;
+        font-size: 18px;
+        cursor: pointer;
+        margin-left: 4px;
+      }
+      &::after {
+        content: '';
+        display: block;
+        clear: both;
+      }
     }
-    .iconfont{
-      float: right;
-      font-size: 18px;
-      cursor: pointer;
-      margin-left: 4px;
+    .note-title {
+      input {
+        display: inline-block;
+        width: 100%;
+        border: none;
+        font-size: 18px;
+        padding: 10px 20px;
+        outline: none;
+      }
     }
-    &::after{
-      content: '';
-      display: block;
-      clear: both;
-    }
-  }
-  .note-title{
-    input{
-      display: inline-block;
-      width: 100%;
-      border: none;
-      font-size: 18px;
-      padding: 10px 20px;
-      outline: none;
-    }
-  }
-  .editor{
-    flex: 1;
-    position: relative;
-    height: 600px;
-    textarea,.preview{
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      padding: 20px;
-    }
-    textarea{
-      border: none;
-      resize: none;
-      outline: none;
-      font-size: 14px;
+    .editor {
+      flex: 1;
+      position: relative;
+      height: calc(100% - 70px);
+      textarea,
+      .preview {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+      }
+      textarea {
+        border: none;
+        resize: none;
+        outline: none;
+        font-size: 14px;
+      }
     }
   }
 }
